Main is now stretching to fix the screen

--- a/app/styles/_styles.scss
+++ b/app/styles/_styles.scss
@@ -36,9 +36,12 @@ header {
 
 .main {
 	height: 100%;
+	@include flex-grow(1);
 }
 
-// ================================================== Repository list
+// ================================================== Dashboard
+
+// -------------------------------------------------- Repository list
 
 .repository-list {
 	$breakpoint-1: 25rem;
